--- a/app.html
+++ b/app.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Rock Paper Scissors</h1>
+    <button onclick="game()">Start Game</button>
 
 
     <script src="./app.js"></script>
